--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,28 +1,19 @@
 {% extends "base.html" %}
+{% load blog_extras %}
 
 {% block content %}
-<div class="alert alert-success" role="alert">
-  A simple success alert—check it out!
-</div>
-<div class="alert alert-danger" role="alert">
-  A simple danger alert—check it out!
-</div>
-<div class="alert alert-warning" role="alert">
-  A simple warning alert—check it out!
-</div>
-
-<button type="button" class="btn btn-primary">Primary</button>
-<a href="#" class="btn btn-secondary">Secondary</a>
-<button type="button" class="btn btn-danger">Danger</button>
-
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton1" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    BootStrap Dropdown
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <li><a class="dropdown-item" href="#">Item 1</a></li>
-    <li><a class="dropdown-item" href="#">Item 2</a></li>
-    <li><a class="dropdown-item" href="#">Item 3</a></li>
-  </ul>
-</div>
+    <h2>Blog Posts</h2>
+    {% for post in posts %}
+    <div class="row">
+        <div class="col">
+            <h3>{{ post.title }}</h3>
+            <small>By {{ post.author|author_details:request.user }} on {{ post.published_at|date:"M, d Y" }}</small>
+            <p>{{ post.summary }}</p>
+            <p>
+                ({{ post.content|wordcount }} words)
+                <a href="#">Read More</a>
+            </p>
+        </div>
+    </div>
+    {% endfor %}
 {% endblock %}
